--- a/src/components/Dashboard/Dashboard.module.css
+++ b/src/components/Dashboard/Dashboard.module.css
@@ -119,11 +119,37 @@
     padding: 0.45rem;
     margin-left: -10px;
 }
+.buttons span:first-child:hover {
+    cursor: pointer;
+    background-color: rgb(107, 148, 209);
+}
+.buttons :nth-child(2):hover {
+    cursor: pointer;
+    background-color: rgb(160, 188, 231);
+}
 
 .tableStyle {
     margin-top: 2rem;
     background: #FFFFFF;
     /* border: 1px solid #E2EAF4; */
+}
+
+.green {
+    width: 78px;
+    height: 27px;
+    background: rgba(27, 243, 164, 0.2);
+    border-radius: 106px;
+    color: #17EC9D;
+    text-align: center;
+}
+
+.red {
+    width: 51px;
+    height: 27px;
+    background: rgba(255, 29, 56, 0.17);
+    border-radius: 106px;
+    color: #FF1D38;
+    text-align: center;
 }
 
 /* .tableHead {
@@ -156,6 +182,11 @@
     align-items: center;
     justify-items: start;
 }
+
+.table__information__option:hover {
+    background-color: rgb(208, 212, 212);
+}
+
 .table__information__option >div:first-child{
     padding-left: 32px;
 }
