--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -20,3 +20,13 @@
         width: 17rem;
     }
 }
+
+@media screen and (max-width: 540px) {
+    .sidemenuHolder {
+        width: 0rem;
+    }
+    .dashboardHolder {
+        width: 100%;
+        margin-right: 0%;
+    }
+}
